[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["KimDuHong <art970@naver.com>"]
readme = "README.md"
packages = [{include = "discord_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
discord = "^2.3.2"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.29"
SQLAlchemy-Utils = "^0.41.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
